# tauri-plugin-python

./: .gitattributes  .gitignore  Cargo.toml  LICENSE_MIT  README.md  build.rs  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json
.changes/: config.json  initial-release.md  readme.md
.github/workflows/: audit.yml  clippy.yml  covector-version-or-publish.yml  e2e.yml  format-and-lint.yml  format.yml  test.yml
dist-js/: index.cjs  index.js
examples/tauri-app/: README.md  index.html  package.json  pnpm-lock.yaml
examples/tauri-app/src/: App.css  App.svelte  App.tsx  ArgInput.css  ArgInput.tsx  OutputConsole.css  OutputConsole.tsx  styles.css
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: main.json
examples/tauri-app/src-tauri/src/: lib.rs  main.rs
guest-js/: index.ts
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: add_resource_path_to_sys_path.toml  call_function.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  python.rs
test_assets/: example.py
webview-dist/: index.d.ts  index.js
webview-src/: index.ts  tsconfig.json
