[package]
name = "tauri-plugin-python"
version = "0.0.0"
authors = ["Olivier Lemasle"]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]

[dependencies]
tauri = { version = "2.0.0-alpha.21" }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"

rustpython-stdlib = { version = "0.3.0", features = ["threading"] }
rustpython-pylib = { version = "0.3.0", optional = true }
rustpython-vm = { version = "0.3.0", features = [
    "importlib",
    "serde",
    "threading",
] }

# cf https://github.com/RustPython/RustPython/issues/5109
malachite-bigint = { version = "=0.1.0" }
malachite-q = "=0.3.2"
malachite-base = "=0.3.2"

# cf https://github.com/RustPython/RustPython/issues/5132
[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.9"
features = [
    "winsock2",
    "ws2def",
    "std",
    "wincrypt",
    "fileapi",
    "impl-default",
    "vcruntime",
    "ifdef",
    "netioapi",
    "profileapi",
]

[features]
default = ["freeze-stdlib"]
freeze-stdlib = [
    "rustpython-vm/freeze-stdlib",
    "rustpython-pylib/freeze-stdlib",
]
