[package]
name = "tauri-plugin-python"
version = "0.0.0"
authors = ["Olivier Lemasle"]
description = "A Tauri plugin to use Python from Tauri apps"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/olivierlemasle/tauri-plugin-python"
edition = "2021"
rust-version = "1.70"
links = "tauri-plugin-python"
exclude = [
    "/.changes",
    "/.github",
    "/.gitattributes",
    "/.gitignore",
    "/examples",
    "/webview-dist",
    "/webview-src",
    "/node_modules",
    "/package.json",
    "/pnpm-lock.yaml",
]

[build-dependencies]
tauri-plugin = { version = "2.0.3", features = ["build"] }

[dependencies]
tauri = { version = "2.1.1" }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"

rustpython-stdlib = { version = "0.4.0", features = ["threading"] }
rustpython-pylib = { version = "0.4.0", optional = true }
rustpython-vm = { version = "0.4.0", features = [
    "importlib",
    "serde",
    "threading",
] }

[features]
default = ["freeze-stdlib"]
freeze-stdlib = [
    "rustpython-vm/freeze-stdlib",
    "rustpython-pylib/freeze-stdlib",
]
